--- a/src/style.css
+++ b/src/style.css
@@ -2,11 +2,13 @@
   display: flex;
   justify-content: space-evenly;
   background-color: #a4ec45;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
  
 }
 
 .board-container{
   margin: 20px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
   
 }
 
