--- a/src/style.css
+++ b/src/style.css
@@ -16,9 +16,15 @@
   margin: 12px;
   border: none;
   background-color: #a4ec45;
-  color: red;
+  color: rgb(139, 4, 4);
   width:30%;
   height:20px;
+  border-radius: 5px;
+  border: 1px solid rgb(139, 4, 4);
+  height: 25px;
+  text-align: center;
+ 
+
  
 }
 
